test/tests/bad/recursive-var-def.carth
;; RecursiveVarDef

(define: foo Int (+ foo 1))
